--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Flask-Babel==0.12.2
 Flask-SQLAlchemy==2.4.0
 Flask-Table==0.5.0
 greenlet==0.4.12
+gunicorn==19.1.0
 httplib2==0.9.2
 idna==2.6
 idna-ssl==1.1.0
